load("//tools/base/bazel:maven.bzl", "maven_repository")
load("//tools/base/bazel:kotlin.bzl", "kotlin_library", "kotlin_test")
load("//tools/base/build-system/integration-test/connected:connected-test.bzl", "gradle_connected_test")
load("//tools/base/bazel/avd:avd.bzl", "avd")

kotlin_library(
    name = "connected",
    srcs = glob([
        "src/main/java/**/*.kt",
        "src/main/java/**/*.java",
    ]),
    #keep sorted
    deps = [
        "//tools/base/bazel/avd:emulator_rule",
        "//tools/base/testutils:tools.testutils",
        "@maven//:junit.junit",
    ],
)

#keep sorted
TEST_DEPS = [
    ":connected",
    "//tools/analytics-library/protos/src/main/proto",
    "//tools/apksig",
    "//tools/apkzlib",
    "//tools/base/annotations",
    "//tools/base/bazel/avd:emulator_rule",
    "//tools/base/build-system:gradle-api",
    "//tools/base/build-system/builder",
    "//tools/base/build-system/builder-model",
    "//tools/base/build-system/builder-test-api:tools.builder-test-api",
    "//tools/base/build-system/gradle-api",
    "//tools/base/build-system/gradle-core",
    "//tools/base/build-system/integration-test/framework",
    "//tools/base/build-system/integration-test/framework/src/main/proto",
    "//tools/base/common:tools.common",
    "//tools/base/ddmlib:tools.ddmlib",
    "//tools/base/perf-logger:studio.perf-logger",
    "//tools/base/perf-logger:studio.perf-logger_testlib",
    "//tools/base/repository:tools.testlib",
    "//tools/base/sdk-common:tools.sdk-common",
    "//tools/base/sdklib:tools.sdklib",
    "//tools/base/testutils:tools.testutils",
    "//tools/base/utp/android-test-plugin-host-device-info-proto",
    "//tools/base/zipflinger",
    "@maven//:com.google.guava.guava",
    "@maven//:com.google.protobuf.protobuf-java",
    "@maven//:com.google.protobuf.protobuf-java-util",
    "@maven//:com.google.truth.extensions.truth-java8-extension",
    "@maven//:com.google.truth.truth",
    "@maven//:org.jetbrains.kotlin.kotlin-stdlib-jdk8",
    "@maven//:org.jetbrains.kotlin.kotlin-test",
]

avd(name = "avd")

# For tests that needs to be updated in order to support API 33 devices.
avd(
    name = "avd_32",
    image = "@system_image_android-32_aosp_atd_x86_64//:x86_64-android-32AospAtd-images",
)

# For tests that require 32-bit x86 support.
avd(
    name = "avd_default_30",
    image = "@system_image_android-30_default_x86_64//:x86_64-android-30-images",
)

avd(
    name = "avd_TiramisuPrivacySandbox",
    image = "@system_image_android-TiramisuPrivacySandbox_default_x86_64//:x86_64-android-TiramisuPrivacySandbox-images",
    platform = "//prebuilts/studio/sdk:platforms/android-TiramisuPrivacySandbox",
)

#keep sorted
TEST_DATA = [
    "//prebuilts/studio/sdk:build-tools/latest",
    "//prebuilts/studio/sdk:platform-tools",
    "//tools/base/build-system:gradle-distrib",
    "//tools/base/build-system/aapt2:aapt2_for_tests",
    "//tools/base/build-system/integration-test:android_platform_for_tests",
]

#keep sorted
MAVEN_REPO_ZIPS = [
    "//tools/base/build-system:android_gradle_plugin",
]

#keep sorted
TEST_MAVEN_REPOS = [
    "//tools/base/build-system:android_gradle_plugin_runtime_dependencies",
    "//tools/base/build-system/integration-test:androidx_latest",
    "//tools/base/build-system/integration-test:androidx_test_latest",
    "//tools/base/build-system/integration-test:kotlin_gradle_plugin_prebuilts",
    "//tools/base/build-system/integration-test:support_library_latest",
    "//tools/base/build-system/integration-test:utp_plugins",
    "//tools/base/build-system/integration-test/connected:prebuilts",
]

gradle_connected_test(
    name = "PrivacySandboxSdkConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_TiramisuPrivacySandbox",
    data = [
        "//prebuilts/studio/sdk:build-tools/latest",
        "//prebuilts/studio/sdk:platform-tools",
        "//tools/base/build-system:gradle-distrib",
        "//tools/base/build-system/aapt2:aapt2_for_tests",
        "//tools/base/build-system/integration-test:android_platform_for_tests",
        "//tools/base/build-system/integration-test:test-projects/privacySandboxSdk",
    ],
    maven_artifacts = [
        "@maven//:androidx.test.ext.junit_1.1.3",
        "@maven//:androidx.appcompat.appcompat_1.4.1",
        "@maven//:androidx.annotation.annotation_1.2.0-rc01",
        "@maven//:androidx.core.core-ktx_1.9.0",
        "@maven//:androidx.privacysandbox.tools.tools-apipackager_1.0.0-alpha03",
        "@maven//:androidx.privacysandbox.tools.tools_1.0.0-alpha03",
        "@maven//:androidx.test.rules_1.3.0",
        "@maven//:junit.junit_4.13.2",
        "@maven//:androidx.test.espresso.espresso-core_3.4.0",
        "@maven//:org.jetbrains.kotlinx.kotlinx-coroutines-android_1.6.4",
        "@maven//:org.jetbrains.kotlinx.kotlinx-coroutines-core_1.6.3",
    ],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = [
        "//tools/base/build-system:android_gradle_plugin_runtime_dependencies",
        "//tools/base/build-system/integration-test:utp_plugins",
        "//tools/base/build-system/integration-test:kotlin_gradle_plugin_latest_prebuilts",
    ],
    tags = ["very_flaky"],  # b/247003418
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "AdditionalTestOutputOverrideConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    avd = ":avd",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/additionalTestOutputOverride"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "AndroidTestResourcesConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "AnnotationProcessorConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd",
    data = TEST_DATA,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ApiConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/api"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "AttrOrderConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/attrOrder"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "BasicConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/basic"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "CmakeJniLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/nativebuild/",
    avd = ":avd",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/ndkJniLib",
    ],
    lint_baseline = "lint_baseline.xml",
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ComposeHelloWorldConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/composeHelloWorld"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS + [
        "//tools/base/build-system/integration-test:kotlin_gradle_plugin_for_compose_prebuilts",
    ],
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibraryAndroidTestWithViewTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA,
    maven_artifacts = [
        "@maven//:androidx.annotation.annotation_1.2.0-beta01",
    ],
    maven_repo_zips = MAVEN_REPO_ZIPS + [
        "//tools/data-binding:data_binding_runtime",
    ],
    maven_repos = TEST_MAVEN_REPOS + [
        "//tools/base/build-system/integration-test/connected:databinding_prebuilts",
    ],
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "CoreLibraryDesugarConversionConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "CoreLibraryDesugarConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "CustomTestedApksTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    avd = ":avd",
    data = TEST_DATA,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "D8DesugaringConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DataBindingExternalArtifactDependencyConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/databinding/",
    avd = ":avd",
    data = TEST_DATA + [
        "//tools/data-binding:integration-test-projects",
        "//tools/data-binding:integration-test-projects-support",
    ],
    maven_repo_zips = MAVEN_REPO_ZIPS + [
        "//tools/data-binding:data_binding_runtime",
    ],
    maven_repos = TEST_MAVEN_REPOS + [
        "//tools/base/build-system/integration-test/connected:databinding_prebuilts",
    ],
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DataBindingIntegrationTestAppsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/databinding/",
    avd = ":avd",
    data = TEST_DATA + [
        "//tools/data-binding:integration-test-projects",
        "//tools/data-binding:integration-test-projects-support",
    ],
    maven_repo_zips = MAVEN_REPO_ZIPS + [
        "//tools/data-binding:data_binding_runtime",
    ],
    maven_repos = TEST_MAVEN_REPOS + [
        "//tools/base/build-system/integration-test/connected:databinding_prebuilts",
    ],
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DensitySplitConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/densitySplit"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DependenciesConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/dependencies"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "DynamicFeatureConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/feature/",
    avd = ":avd",
    data = TEST_DATA,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FlavoredConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/flavored"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FlavoredlibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/flavoredlib"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FlavorlibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/flavorlib"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "FlavorsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/flavors"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "JacocoConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "JarsInLibrariesConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/assets"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "KotlinAppConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/kotlinApp"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibMinifyJarDepConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libMinifyJarDep"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibMinifyLibDepConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    avd = ":avd",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libMinifyLibDep"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibsTestConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libsTest"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "LibTestDepConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libTestDep"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MigratedConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/migrated"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MinifyConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/minify"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MinifyLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/minifyLib"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MinifyInstrumentLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    avd = ":avd",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/libMinifyLibDep"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MlModelBindingConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd",
    data = TEST_DATA + [
        "//prebuilts/tools/common/mlkit/testData",
        "//tools/base/build-system/integration-test:test-projects/mlModelBinding",
    ],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MultiDexConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/multiDex"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MultiDexWithLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/multiDexWithLib"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MultiProjectConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/multiproject"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "MultiresConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/multires"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NdkConnectedCheckTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    avd = ":avd",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
    ],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NdkJniLibConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    avd = ":avd_32",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/ndkJniLib",
    ],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NdkLibPrebuiltsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    avd = ":avd_32",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/ndkLibPrebuilts",
    ],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NdkSanAngelesConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    avd = ":avd_default_30",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
        "//tools/base/build-system/integration-test:test-projects/ndkSanAngeles",
    ],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "NoSplitNdkVariantsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/ndk/",
    avd = ":avd_32",
    data = TEST_DATA + [
        "//prebuilts/studio/sdk:cmake",
        "//prebuilts/studio/sdk:ndk",
    ],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "Overlay3ConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/overlay3"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "PkgOverrideConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/pkgOverride"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "ResValueTypeConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd",
    data = TEST_DATA,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SameNamedLibsConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/sameNamedLibs"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SeparateTestModuleConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestModule"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SeparateTestModuleWithMinifiedAppConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestModuleWithMinifiedApp"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SeparateTestWithAarDependencyConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestModule"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SeparateTestWithMinificationButNoObfuscationConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestWithMinificationButNoObfuscation"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "SigningConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd_32",
    data = TEST_DATA,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    resources = glob(["src/test/resources/**"]),
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "TestingSupportLibraryConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    avd = ":avd_32",
    data = TEST_DATA,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "TestWithSameDepAsAppConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/dependencies/",
    avd = ":avd_32",
    data = TEST_DATA,
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "UtpConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd",
    data = TEST_DATA + [
        "//tools/adt/idea/utp:addGradleAndroidTestListener",
        "//tools/base/build-system/integration-test:test-projects/utp",
    ],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    shard_count = 2,
    deps = TEST_DEPS + [
        "//tools/base/build-system/integration-test/utp",
    ],
)

gradle_connected_test(
    name = "KotlinMultiplatformAndroidConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/library/",
    avd = ":avd",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/kotlinMultiplatform"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "InstrumentationRunnerConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/testing/",
    avd = ":avd_32",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/separateTestModule"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

gradle_connected_test(
    name = "InstallProfilesPerDeviceApiConnectedTest",
    srcs = "src/test/java/com/android/build/gradle/integration/connected/application/",
    avd = ":avd",
    data = TEST_DATA + ["//tools/base/build-system/integration-test:test-projects/basic"],
    maven_repo_zips = MAVEN_REPO_ZIPS,
    maven_repos = TEST_MAVEN_REPOS,
    deps = TEST_DEPS,
)

filegroup(
    name = "all_test_files",
    srcs = glob(
        [
            "src/test/java/**/*.java",
            "src/test/java/**/*.kt",
            "BUILD.bazel",
        ],
    ),
    visibility = ["//visibility:private"],
)

kotlin_test(
    name = "BazelTargetTest",
    srcs = ["src/test/java/com/android/build/gradle/integration/connected/BazelTargetTest.kt"],
    data = [":all_test_files"],
    test_class = "com.android.build.gradle.integration.connected.BazelTargetTest",
    deps = [
        "//tools/base/build-system/integration-test/framework",
        "//tools/base/testutils:tools.testutils",
        "@maven//:junit.junit",
    ],
)

# Maven repo with all the dependencies required by test projects.
#
# Quick way of updating this list:
# - Run the new test with bazel
# - Copy the output log to $PWD/test.log
# - Run this command:
# grep -F '> Could not find' test.log \
#   | sed -e "s# *> Could not find \(.*\)\.#\1#"
#   | sed -e 's#\(.*\):\(.*\):\(.*\)#"@maven//:\1.\2_\3",#'
#   | sort | uniq
maven_repository(
    name = "prebuilts",
    # keep sorted
    artifacts = [
        "@maven//:androidx.activity.activity-compose_1.5.1",
        "@maven//:androidx.appcompat.appcompat_1.1.0",
        "@maven//:androidx.appcompat.appcompat_1.2.0",
        "@maven//:androidx.appcompat.appcompat_1.3.0-beta01",
        "@maven//:androidx.compose.compiler.compiler_1.3.2",
        "@maven//:androidx.compose.material.material_1.3.0",
        "@maven//:androidx.compose.ui.ui-tooling_1.3.0",
        "@maven//:androidx.core.core-ktx_1.1.0",
        "@maven//:androidx.lifecycle.lifecycle-common-java8_2.6.1",
        "@maven//:androidx.lifecycle.lifecycle-livedata-ktx_2.6.1",
        "@maven//:androidx.lifecycle.lifecycle-viewmodel-ktx_2.6.1",
        "@maven//:androidx.test.core_1.4.0-alpha06",
        "@maven//:androidx.test.core_1.5.0",
        "@maven//:androidx.test.espresso.espresso-core_3.2.0",
        "@maven//:androidx.test.ext.junit_1.1.2",
        "@maven//:androidx.test.ext.junit_1.1.3-alpha02",
        "@maven//:androidx.test.orchestrator_1.5.0-alpha02",
        "@maven//:androidx.test.rules_1.1.0",
        "@maven//:androidx.test.rules_1.4.0-alpha06",
        "@maven//:androidx.test.runner_1.4.0-alpha06",
        "@maven//:androidx.test.services.test-services_1.5.0-alpha02",
        "@maven//:com.android.support.constraint.constraint-layout_1.0.2",
        "@maven//:com.android.support.multidex-instrumentation_1.0.2",
        "@maven//:com.android.support.multidex_1.0.2",
        "@maven//:com.android.tools.desugar_jdk_libs_1.1.5",
        "@maven//:com.google.android.gms.play-services-base_15.0.1",
        "@maven//:com.google.code.findbugs.jsr305_1.3.9",
        "@maven//:com.google.guava.guava_19.0",
        "@maven//:com.google.protobuf.protobuf-java-util_3.22.3",
        "@maven//:com.google.protobuf.protobuf-java_3.22.3",
        "@maven//:org.codehaus.mojo.animal-sniffer-annotations_1.19",
        "@maven//:org.hamcrest.hamcrest-library_1.3",
        "@maven//:org.jetbrains.kotlinx.kotlinx-coroutines-android_1.6.4",
        "@maven//:org.jetbrains.kotlinx.kotlinx-coroutines-core-common_1.3.6",
        "@maven//:org.tensorflow.tensorflow-lite-metadata_0.1.0",
        "@maven//:org.tensorflow.tensorflow-lite-support_0.1.0",
    ],
    visibility = ["__subpackages__"],
)

# Maven repo with all the dependencies required by databinding tests.
#
# Quick way of updating this list:
# - Run the new test with bazel
# - Copy the output log to $PWD/test.log
# - Run this command:
# grep -F '> Could not find' test.log \
# grep -F '> Could not find' test.log \
#   | sed -e "s# *> Could not find \(.*\)\.#\1#"
#   | sed -e 's#\(.*\):\(.*\):\(.*\)#"@maven//:\1.\2_\3",#'
#   | sort | uniq
maven_repository(
    name = "databinding_prebuilts",
    # keep sorted
    artifacts = [
        "@maven//:android.arch.lifecycle.runtime_1.0.3",
        "@maven//:androidx.appcompat.appcompat_1.0.2",
        "@maven//:androidx.cardview.cardview_1.0.0",
        "@maven//:androidx.lifecycle.lifecycle-extensions_2.2.0",
        "@maven//:androidx.lifecycle.lifecycle-livedata-ktx_2.6.1",
        "@maven//:androidx.lifecycle.lifecycle-livedata_2.6.1",
        "@maven//:androidx.lifecycle.lifecycle-process_2.6.1",
        "@maven//:androidx.lifecycle.lifecycle-runtime-ktx_2.6.1",
        "@maven//:androidx.lifecycle.lifecycle-runtime_2.6.1",
        "@maven//:androidx.lifecycle.lifecycle-service_2.6.1",
        "@maven//:androidx.lifecycle.lifecycle-viewmodel-savedstate_2.6.1",
        "@maven//:androidx.lifecycle.lifecycle-viewmodel_2.6.1",
        "@maven//:androidx.test.espresso.espresso-core_3.1.0",
        "@maven//:com.android.support.appcompat-v7_26.1.0",
        "@maven//:com.android.support.test.espresso.espresso-core_3.0.1",
        "@maven//:com.android.support.test.runner_1.0.1",
    ],
    visibility = ["__subpackages__"],
)
